// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`paste() paste on empty text input 1`] = `
[
  {
    "name": "focus",
    "payload": {
      "nativeEvent": {
        "target": 0,
      },
    },
  },
  {
    "name": "selectionChange",
    "payload": {
      "nativeEvent": {
        "selection": {
          "end": 0,
          "start": 0,
        },
      },
    },
  },
  {
    "name": "change",
    "payload": {
      "nativeEvent": {
        "eventCount": 0,
        "selection": {
          "end": 3,
          "start": 3,
        },
        "target": 0,
        "text": "Hi!",
      },
    },
  },
  {
    "name": "changeText",
    "payload": "Hi!",
  },
  {
    "name": "selectionChange",
    "payload": {
      "nativeEvent": {
        "selection": {
          "end": 3,
          "start": 3,
        },
      },
    },
  },
  {
    "name": "endEditing",
    "payload": {
      "nativeEvent": {
        "target": 0,
        "text": "Hi!",
      },
    },
  },
  {
    "name": "blur",
    "payload": {
      "nativeEvent": {
        "target": 0,
      },
    },
  },
]
`;

exports[`paste() paste on filled text input 1`] = `
[
  {
    "name": "focus",
    "payload": {
      "nativeEvent": {
        "target": 0,
      },
    },
  },
  {
    "name": "selectionChange",
    "payload": {
      "nativeEvent": {
        "selection": {
          "end": 6,
          "start": 0,
        },
      },
    },
  },
  {
    "name": "change",
    "payload": {
      "nativeEvent": {
        "eventCount": 0,
        "selection": {
          "end": 3,
          "start": 3,
        },
        "target": 0,
        "text": "Hi!",
      },
    },
  },
  {
    "name": "changeText",
    "payload": "Hi!",
  },
  {
    "name": "selectionChange",
    "payload": {
      "nativeEvent": {
        "selection": {
          "end": 3,
          "start": 3,
        },
      },
    },
  },
  {
    "name": "endEditing",
    "payload": {
      "nativeEvent": {
        "target": 0,
        "text": "Hi!",
      },
    },
  },
  {
    "name": "blur",
    "payload": {
      "nativeEvent": {
        "target": 0,
      },
    },
  },
]
`;

exports[`paste() supports defaultValue prop: defaultValue: "Hello Default!" 1`] = `
[
  {
    "name": "focus",
    "payload": {
      "nativeEvent": {
        "target": 0,
      },
    },
  },
  {
    "name": "selectionChange",
    "payload": {
      "nativeEvent": {
        "selection": {
          "end": 14,
          "start": 0,
        },
      },
    },
  },
  {
    "name": "change",
    "payload": {
      "nativeEvent": {
        "eventCount": 0,
        "selection": {
          "end": 3,
          "start": 3,
        },
        "target": 0,
        "text": "Hi!",
      },
    },
  },
  {
    "name": "changeText",
    "payload": "Hi!",
  },
  {
    "name": "selectionChange",
    "payload": {
      "nativeEvent": {
        "selection": {
          "end": 3,
          "start": 3,
        },
      },
    },
  },
  {
    "name": "endEditing",
    "payload": {
      "nativeEvent": {
        "target": 0,
        "text": "Hi!",
      },
    },
  },
  {
    "name": "blur",
    "payload": {
      "nativeEvent": {
        "target": 0,
      },
    },
  },
]
`;

exports[`paste() supports multiline: value: "Hello World!\\nHow are you?" multiline: true, 1`] = `
[
  {
    "name": "focus",
    "payload": {
      "nativeEvent": {
        "target": 0,
      },
    },
  },
  {
    "name": "selectionChange",
    "payload": {
      "nativeEvent": {
        "selection": {
          "end": 25,
          "start": 0,
        },
      },
    },
  },
  {
    "name": "change",
    "payload": {
      "nativeEvent": {
        "eventCount": 0,
        "selection": {
          "end": 3,
          "start": 3,
        },
        "target": 0,
        "text": "Hi!",
      },
    },
  },
  {
    "name": "changeText",
    "payload": "Hi!",
  },
  {
    "name": "selectionChange",
    "payload": {
      "nativeEvent": {
        "selection": {
          "end": 3,
          "start": 3,
        },
      },
    },
  },
  {
    "name": "contentSizeChange",
    "payload": {
      "nativeEvent": {
        "contentSize": {
          "height": 16,
          "width": 15,
        },
        "target": 0,
      },
    },
  },
  {
    "name": "endEditing",
    "payload": {
      "nativeEvent": {
        "target": 0,
        "text": "Hi!",
      },
    },
  },
  {
    "name": "blur",
    "payload": {
      "nativeEvent": {
        "target": 0,
      },
    },
  },
]
`;

exports[`paste() works when not all events have handlers 1`] = `
[
  {
    "name": "changeText",
    "payload": "Hi!",
  },
  {
    "name": "endEditing",
    "payload": {
      "nativeEvent": {
        "target": 0,
        "text": "Hi!",
      },
    },
  },
]
`;
